Edit Patient Details Debugging Completed

--- a/src/main/webapp/resources/css/maincss.css
+++ b/src/main/webapp/resources/css/maincss.css
@@ -895,6 +895,23 @@ body {
     width : 100px!important;
 }
 
+
+
+.shortinputOpd .ui-autocomplete-input {
+    width: 320px!important;
+}
+
+.shortinputOpd .ui-inputfield, .shortinputOpd  .ui-widget-content .ui-inputfield {
+    width: 320px!important;
+}
+
+.shortinputOpd .ui-autocomplete-input.ui-inputfield { 
+    width : 320px!important;
+}
+
+
+
+
 .shortinput2 .ui-autocomplete-input.ui-inputfield { 
     width : 200px!important;
 }
