--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -710,7 +710,7 @@
 
                                 <p:submenu styleClass="rightBordrOnly" label="User"  >
                                     <p:menuitem  ajax="false"  action="/user_change_password" value="Change Password"   ></p:menuitem>
-                                    <p:menuitem  ajax="false"  action="/user_preferances" value="Change Preferances" rendered="#{webUserController.hasPrivilege('ChangePreferece')}" ></p:menuitem>
+                                    <p:menuitem  ajax="false"  action="/user_preferances" value="Change Preferances"  ></p:menuitem>
                                 </p:submenu>
 
                                 <p:submenu styleClass="rightBordrOnly" label="Admin"  rendered="#{webUserController.hasPrivilege('Admin')}">
