--- a/src/main/webapp/resources/css/printing.css
+++ b/src/main/webapp/resources/css/printing.css
@@ -66,6 +66,15 @@ root {
         font-size: 180%;
     }
 
+    .stickerLabel{
+        page-break-after:always!important; 
+        position: relative!important;  
+        margin: 0px!important; 
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    
 }
 
 
@@ -119,6 +128,15 @@ root {
         border: 1px solid!important;
         font-size: 130%;
 
+    }
+    
+     .stickerLabel{
+        page-break-after:always!important; 
+        position: relative!important;  
+        margin: 0px!important; 
+        width: 6cm;
+        height: 2.5cm;
+        overflow: hidden;
     }
 
 }
