--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -31,21 +31,21 @@
     <h:body>
         <div id="panelFullSpread" class="fullSpread ui-widget-content " >
 
+            <h:panelGroup rendered="false" >
+                <h:form >
+                    <p:panelGrid columns="2" >
 
-            <h:form >
-                <p:panelGrid columns="2" >
+                        <p:outputLabel value="Message" ></p:outputLabel>
+                        <p:inputText value="#{applicationController.subject}" ></p:inputText>
 
-                    <p:outputLabel value="Message" ></p:outputLabel>
-                    <p:inputText value="#{applicationController.subject}" ></p:inputText>
+                        <p:outputLabel value="Body" ></p:outputLabel>
+                        <p:inputText value="#{applicationController.body}" ></p:inputText>
 
-                    <p:outputLabel value="Body" ></p:outputLabel>
-                    <p:inputText value="#{applicationController.body}" ></p:inputText>
+                        <p:commandButton ajax="false" action="#{applicationController.sendEmail()}" value="Send" ></p:commandButton>
 
-                    <p:commandButton ajax="false" action="#{applicationController.sendEmail()}" value="Send" ></p:commandButton>
-
-                </p:panelGrid>
-            </h:form>
-
+                    </p:panelGrid>
+                </h:form>
+            </h:panelGroup>
 
             <p:growl id="publicGrowl"    />
             <h:panelGroup >
