Patient Age and Month Improved.

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -6,6 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
         <ui:insert name="title"   >
             <title>
                 <h:panelGroup rendered="#{sessionController.logged}" >
