--- a/src/main/webapp/resources/template/template_contents_only.xhtml
+++ b/src/main/webapp/resources/template/template_contents_only.xhtml
@@ -6,6 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
         <h:outputStylesheet library="css" name="maincss.css" />
         <h:outputStylesheet library="css" name="css1.css" />
         <h:outputStylesheet library="css" name="summery.css" />
