--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -936,6 +936,9 @@
             </div>
             <div style="position: fixed; bottom: 10px; right: 10px; " class="nonPrintBlock" >
                 <p:clock pattern="hh:mm:ss a - EEEE - dd MMMM yyyy" mode="server"  />  
+                <p:outputLabel rendered="true" value="#{sessionController.institutionPreference.id}" ></p:outputLabel>
+                <p:spacer width="10" height="1" rendered="true" ></p:spacer>
+                <p:outputLabel rendered="true" value="#{sessionController.userPreference.id}" ></p:outputLabel>
             </div>
 
 
