--- a/src/main/webapp/resources/css/pharmacypos.css
+++ b/src/main/webapp/resources/css/pharmacypos.css
@@ -256,8 +256,8 @@
 }
 
 .billDetailsFiveFive{   
-    font-size: 12px!important;
-    font-family:Arial, Helvetica, sans-serif!important;
+    font-size: 14px!important;
+    font-family:verdana, Helvetica, sans-serif!important;
 }
 
 .itemHeadings{
@@ -269,15 +269,15 @@
 
 .itemHeadingsFiveFive{
 
-    font-size: 11px!important;
-    font-family:Arial, Helvetica, sans-serif!important;
+    font-size: 15px!important;
+    font-family:verdana, Helvetica, sans-serif!important;
     font-weight: bold;
 }
 
 .itemsBlock{
     text-align: center!important;   
     font-size: 13px!important;
-    font-family:Arial, Helvetica, sans-serif!important;
+    font-family:verdana, Helvetica, sans-serif!important;
     text-transform: capitalize!important;
 }
 
@@ -285,7 +285,7 @@
 itemsBlockRight{
     text-align: right!important;   
     font-size: 13px!important;
-    font-family:Arial, Helvetica, sans-serif!important;
+    font-family:verdana, Helvetica, sans-serif!important;
     text-transform: capitalize!important;
     padding-right: 30px;
 }
@@ -338,8 +338,8 @@ itemsBlockRight{
 }
 
 .totalsBlock{
-    font-size: 14px!important;
-    font-family:Arial, Helvetica, sans-serif!important;
+    font-size: 15px!important;
+    font-family:Verdana, Helvetica, sans-serif!important;
 }
 
 .totalsItemBlock{
